# qmmp-dca

./: README  README.md  dca.pro  dcahelper.cpp  dcahelper.h  decoder_dca.h  decoderdcafactory.cpp  decoderdcafactory.h
common/: common.pri  stdio_file.h
libdca/: CMakeLists.txt  parse.c
